--- a/src/tools/jasmine/Makefile
+++ b/src/tools/jasmine/Makefile
@@ -20,7 +20,8 @@
 ## History
 ## =======
 ##
-## 02/28/2015 by li huang
+## 02/28/2015 by li huang (created)
+## 08/17/2015 by li huang (last modified)
 ##
 ##
 
@@ -34,17 +35,22 @@ lev1 = atomic_full.o atomic_sector.o
 lev2 = atomic_stream.o atomic_util.o
 lev3 = atomic_dump.o atomic_print.o
 main = atomic_main.o
-MAPI = atomic_api.o libMM.a
+open = atomic_open.o
 
-objects = $(modc) $(core) $(lev1) $(lev2) $(lev3) $(main) $(MAPI)
+CAPI = atomic_api.o
+CLIB = libMM.a
+
+objects = $(modc) $(core) $(lev1) $(lev2) $(lev3)
+exe_obj = $(objects) $(main) $(CLIB)
+lib_obj = $(objects) $(open) $(CAPI)
 
 default: all
 
 all: exe
 
 api:
-	cp ../../api/japi.mod .
-	cp ../../api/atomic_api.o .
+	cp ../../capi/japi.mod .
+	cp ../../capi/atomic_api.o .
 
 cssl:
 	cp ../../common/libMM.a .
@@ -54,16 +60,13 @@ csml:
 	cp ../../common/parser.mod .
 	cp ../../common/linkedlist.mod .
 
-touch:
-	touch atomic_main.f90
-
 exe: api cssl csml atomic-exe
-atomic-exe: $(objects)
-	$(LINKER) $(objects) -o atomic $(LFLAGS) $(LIBS)
+atomic-exe: $(exe_obj)
+	$(LINKER) $(exe_obj) -o atomic $(LFLAGS) $(LIBS)
 
-lib: api cssl csml touch atomic-lib
-atomic-lib: $(objects)
-	$(ARCHIVER) libatomic.a $(objects)
+lib: api cssl csml atomic-lib
+atomic-lib: $(lib_obj)
+	$(ARCHIVER) libatomic.a $(lib_obj)
 
 .f90.o:
 	$(F90) $(FFLAGS) $*.f90
