--- a/src/tools/hibiscus/script/Makefile
+++ b/src/tools/hibiscus/script/Makefile
@@ -20,7 +20,8 @@
 ## History
 ## =======
 ##
-## 11/03/2014 by li huang
+## 11/03/2014 by li huang (created)
+## 08/17/2015 by li huang (last modified)
 ##
 ##
 
