--- a/tutor/t922/atom.config.in
+++ b/tutor/t922/atom.config.in
@@ -2,7 +2,7 @@
 !!! source  : t922/atom.config.in
 !!! solver  : LAVENDER
 !!! purpose : for tutorial
-!!! author  : yilin wang (qhwyl2006@126.com)
+!!! author  : yilin wang (email:qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
 
 !!>>> setup general control flags
