camellia/Makefile, improve it to meet the new requirement

--- a/src/ctqmc/camellia/Makefile
+++ b/src/ctqmc/camellia/Makefile
@@ -1,22 +1,53 @@
+##
+##
+## Introduction
+## ============
+##
+## Makefile for iqist/src/ctqmc/camellia directory.
+##
+## Usage
+## =====
+##
+## 'make', 'make lib', 'make clean', 'make clean-dat' or 'make clean-all'
+##
+## Author
+## ======
+##
+## This building system is designed, created, implemented, and maintained by
+##
+## Li Huang // email: lihuang.dmft@gmail.com
+##
+## History
+## =======
+##
+## 02/28/2015 by li huang (created)
+## 08/17/2015 by li huang (last modified)
+##
+##
+
 .SUFFIXES: .f90
 
-include ./make.sys
+include ../../build/make.sys
 
-default: all
-
-modm = mod_mpi.o mod_leja.o mod_skynet.o mod_sparse.o mod_spring.o mod_stack.o
-modn = ctqmc_constants.o ctqmc_control.o ctqmc_context.o
+modc = ctqmc_control.o ctqmc_context.o
 dmft = ctqmc_dmft.o
 core = ctqmc_solver.o
 lev1 = ctqmc_flavor.o ctqmc_update.o
-lev2 = ctqmc_record.o ctqmc_status.o ctqmc_stream.o
-lev3 = ctqmc_fourier.o ctqmc_spline.o ctqmc_util.o
-dump = ctqmc_dump.o ctqmc_print.o
+lev2 = ctqmc_record.o ctqmc_status.o ctqmc_stream.o ctqmc_util.o
+lev3 = ctqmc_dump.o ctqmc_print.o
 main = ctqmc_main.o
+open = ctqmc_open.o
 
-objects = $(modm) $(modn) $(dmft) $(core) $(lev1) $(lev2) $(lev3) $(dump) $(main)
+CAPI = ctqmc_api.o
+CLIB = libMM.a
 
-all: ctqmc
+objects = $(modc) $(dmft) $(core) $(lev1) $(lev2) $(lev3)
+exe_obj = $(objects) $(main) $(CLIB)
+lib_obj = $(objects) $(open) $(CAPI)
+
+default: all
+
+all: exe
 
 ctqmc: $(objects)
 	$(LINKER) $(objects) -o ctqmc $(LFLAGS) $(LIBS)
