common/Makefile, add support to m_leja.f90

--- a/src/common/Makefile
+++ b/src/common/Makefile
@@ -29,7 +29,7 @@
 
 include ../build/make.sys
 
-mod = m_constants.o m_linkedlist.o m_mpi.o m_parser.o m_skynet.o m_sparse.o m_spring.o m_stack.o
+mod = m_constants.o m_leja.o m_linkedlist.o m_mpi.o m_parser.o m_skynet.o m_sparse.o m_spring.o m_stack.o
 sub = s_error.o s_fft.o s_integrator.o s_matrix.o s_spline.o s_util.o s_vector.o
 objects = $(mod) $(sub)
 
