modify jasmine/Makefile, to be compatible with the new build system

--- a/src/tools/jasmine/Makefile
+++ b/src/tools/jasmine/Makefile
@@ -27,7 +27,7 @@
 
 .SUFFIXES: .f90
 
-include ../../build/make.sys
+include ../../../build/make.sys
 
 modc = atomic_control.o atomic_context.o
 core = atomic_driver.o
@@ -49,16 +49,16 @@ default: all
 all: exe
 
 api:
-	cp ../../capi/japi.mod .
-	cp ../../capi/atomic_api.o .
+	cp ../../layer/japi.mod .
+	cp ../../layer/atomic_api.o .
 
 cssl:
-	cp ../../common/libMM.a .
+	cp ../../base/libMM.a .
 
 csml:
-	cp ../../common/constants.mod .
-	cp ../../common/parser.mod .
-	cp ../../common/linkedlist.mod .
+	cp ../../base/constants.mod .
+	cp ../../base/parser.mod .
+	cp ../../base/linkedlist.mod .
 
 exe: api cssl csml atomic-exe
 atomic-exe: $(exe_obj)
