modify daisy/Makefile, rename layer to capi

--- a/src/hfqmc/daisy/Makefile
+++ b/src/hfqmc/daisy/Makefile
@@ -50,8 +50,8 @@ default: all
 all: exe
 
 api:
-	cp ../../layer/dapi.mod .
-	cp ../../layer/hfqmc_api.o .
+	cp ../../capi/dapi.mod .
+	cp ../../capi/hfqmc_api.o .
 
 cssl:
 	cp ../../base/libMM.a .
