--- a/tutor/t22/atom.config.in
+++ b/tutor/t22/atom.config.in
@@ -1,6 +1,6 @@
 !!!-----------------------------------------------------------------------
-!!! source  : t922/atom.config.in
-!!! solver  : LAVENDER
+!!! source  : t22/atom.config.in
+!!! solver  : JASMINE
 !!! purpose : for tutorial
 !!! author  : yilin wang (email:qhwyl2006@126.com)
 !!!-----------------------------------------------------------------------
