--- a/src/app/begonia/Makefile
+++ b/src/app/begonia/Makefile
@@ -39,17 +39,12 @@ main = df_main.o
 
 CLIB = libMM.a
 
-objects = $(modc) $(dmft) $(core) $(lev1) $(lev2) $(lev3)
+objects = $(modc) $(dual) $(core) $(lev1) $(lev2) $(lev3)
 exe_obj = $(objects) $(main) $(CLIB)
-lib_obj = $(objects) $(open) $(CAPI)
 
 default: all
 
 all: exe
-
-api:
-	cp ../../capi/capi.mod .
-	cp ../../capi/ctqmc_api.o .
 
 cssl:
 	cp ../../base/libMM.a .
@@ -57,23 +52,16 @@ cssl:
 csml:
 	cp ../../base/constants.mod .
 	cp ../../base/mmpi.mod .
-	cp ../../base/spring.mod .
-	cp ../../base/stack.mod .
 	cp ../../base/parser.mod .
 	cp ../../base/linkedlist.mod .
 
-exe: api cssl csml ctqmc-exe
-ctqmc-exe: $(exe_obj)
-	$(LINKER) $(exe_obj) -o ctqmc $(LFLAGS) $(LIBS)
+exe: cssl csml df-exe
+df-exe: $(exe_obj)
+	$(LINKER) $(exe_obj) -o df $(LFLAGS) $(LIBS)
 
-lib: api cssl csml ctqmc-lib
-ctqmc-lib: $(lib_obj)
-	$(ARCHIVER) libctqmc.a $(lib_obj)
-
-pylib: lib
-	cpp -E -DPYAPI ctqmc_open.f90 > ctqmc_open_py.f90
-	$(F2PY) -c --f90exec=$(F2PYC) -m pyiqist -L. -lctqmc -lMM $(F2PYL) ctqmc_open_py.f90
-	rm -fr *.dSYM ctqmc_open_py.f90
+lib: cssl csml df-lib
+df-lib: $(lib_obj)
+	$(ARCHIVER) libdf.a $(lib_obj)
 
 .f90.o:
 	$(F90) $(FFLAGS) $*.f90
@@ -82,8 +70,8 @@ clean:
 	rm -f *.mod
 	rm -f *.o
 	rm -f *.so
-	rm -f ctqmc
-	rm -f libctqmc.a
+	rm -f df
+	rm -f libdf.a
 	rm -f libMM.a
 
 clean-dat:
